[package]
name = "hcp"
version = "0.2.0"
description = "Utility for running and subprocess and pinging healthchecks.io with result"
license = "MIT"
documentation = "https://github.com/drewkett/hcp"
homepage = "https://github.com/drewkett/hcp"
repository = "https://github.com/drewkett/hcp"
authors = ["Andrew Burkett <burkett.andrew@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2"
ureq = "2.4.0"
